# lotos-screensaver

./: .clang-format  .gitignore  .xscreensaver  CMakeLists.txt  README.md  bootstrap.sh  carrousel.py  config.json  config.yaml  configure_xscreensaver.py  lotos_saver.py  postinstall.sh  pyproject.toml  requirements.txt
config/systemd/: lotos.service  lotos.timer
lotos/: __init__.py  __main__.py  button_overlay.py  carrousel.py  configuration.py  cv_player.py  player.py  slider.py  utils.py
lotos-screensaver/: blank.hpp  button_layer.hpp  configuration.hpp  main.cpp  media_layer.hpp  parameters.hpp  render.hpp  saver_manager.hpp
lotos_screensaver/: __init__.py  activity.py  animation_curve.py  button.py  configuration.py  configuration_manager.py  frame_manager.py  manager.py  operation_manager.py  overlay_manager.py  screen_manager.py  screensaver.py  utils.py
src/: __init__.py  carrousel.py  configuration.py  slider.py  utils.py
